rust/crates/dsl-core/tests/snapshots/ast_golden__ast_kyc_case_close.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 75
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "kyc-case",
                verb: "close",
                arguments: [
                    Argument {
                        key: "case-id",
                        value: SymbolRef {
                            name: "case",
                            span: Span {
                                start: 25,
                                end: 30,
                            },
                        },
                        span: Span {
                            start: 16,
                            end: 30,
                        },
                    },
                    Argument {
                        key: "outcome",
                        value: Literal(
                            String(
                                "approved",
                            ),
                            Span {
                                start: 40,
                                end: 50,
                            },
                        ),
                        span: Span {
                            start: 31,
                            end: 50,
                        },
                    },
                    Argument {
                        key: "rationale",
                        value: Literal(
                            String(
                                "Full documentation received",
                            ),
                            Span {
                                start: 62,
                                end: 91,
                            },
                        ),
                        span: Span {
                            start: 51,
                            end: 91,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 92,
                },
            },
        ),
    ],
}
