rust/crates/dsl-core/tests/snapshots/ast_golden__ast_kyc_coverage_check.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 82
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "kyc-coverage",
                verb: "check",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 28,
                                end: 32,
                            },
                        },
                        span: Span {
                            start: 20,
                            end: 32,
                        },
                    },
                    Argument {
                        key: "target",
                        value: Literal(
                            String(
                                "full_kyc",
                            ),
                            Span {
                                start: 41,
                                end: 51,
                            },
                        ),
                        span: Span {
                            start: 33,
                            end: 51,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 52,
                },
            },
        ),
    ],
}
