rust/crates/dsl-core/tests/snapshots/ast_golden__ast_kyc_tollgate_evaluate.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 89
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "kyc-tollgate",
                verb: "evaluate",
                arguments: [
                    Argument {
                        key: "case-id",
                        value: SymbolRef {
                            name: "case",
                            span: Span {
                                start: 32,
                                end: 37,
                            },
                        },
                        span: Span {
                            start: 23,
                            end: 37,
                        },
                    },
                    Argument {
                        key: "strict",
                        value: Literal(
                            Boolean(
                                true,
                            ),
                            Span {
                                start: 46,
                                end: 50,
                            },
                        ),
                        span: Span {
                            start: 38,
                            end: 50,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 51,
                },
            },
        ),
    ],
}
